--- a/styles/planets.css
+++ b/styles/planets.css
@@ -127,7 +127,7 @@ img {
 
 /* Site Navigation */
 .site-header {
-  background-color: #FFFFFF;
+  background-color: #000000;
   padding: 30px 15px;
 }
 .site-navigation {
@@ -143,7 +143,7 @@ img {
   margin: 10px;
 }
 .site-header-left li button {
-  background-color: #FFFFFF;
+  background-color: #000000;
   border-radius: 20px;
 }
 .site-header-left img { 
@@ -261,11 +261,11 @@ input {
 }
 .page-hero-header-left {
   padding: 0px 40px;
-  color: #FFFFFF;
+  color: #000000;
 }
 .main-content-benefits {
   padding: 80px 0;
-  background-color: #F5F9FF;
+  background-color: #000000;
 }
 .main-content-benefits h2 {
   color: #65A3C7;
@@ -281,7 +281,7 @@ input {
 }
 .main-content-info-right {
   padding: 60px;
-  color: #FFFFFF;
+  color: #000000;
   width: 100%;
 }
 .main-content-cta-left, .main-content-cta-right {
@@ -291,7 +291,7 @@ input {
 }
 .main-content-cta {
   background-color: #65A3C7;
-  color: #FFFFFF;
+  color: #000000;
   padding: 80px 0;
 }
 .cta-container {
@@ -325,7 +325,7 @@ input {
   text-align: center;
 }
 .item .item-image {
-  background: #FFFFFF;
+  background: #000000;
   box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
   border-radius: 10px;
   width: 100%;
