Home Page Design Changes

--- a/styles/planets.css
+++ b/styles/planets.css
@@ -247,7 +247,8 @@ input {
 /* 6. Page Styles
 ======================================== */
 .page-hero-header {
-  background-color: #627FB0; 
+  animation: transition 4s infinite alternate;
+  background-color: #627FB0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -309,6 +310,44 @@ input {
   -webkit-appearance: none;
   -moz-appearance: none;
   border: none;
+}
+.shooting-star{
+  position: absolute;
+  top: 75%;
+  left: 100%;
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.1), 0 0 0 8px rgba(255, 255, 255, 0.1), 0 0 20px rgba(255, 255, 255, 1)  ;
+  animation:  animate 8s linear infinite;
+  animation-delay: 1s;
+}
+.shooting-star::before{
+  content: '';
+  top: 50%;
+  transform: translateY(50%);
+  width: 300px;
+  height: 1px;
+  background: linear-gradient(90deg, #fff, transparent);
+}
+@keyframes animate {
+  0%
+  {
+      transform: rotate(180deg) translateX(90);
+      opacity: 1;
+  }
+  70%
+  {
+      opacity: 1;
+
+  }
+  100%
+  {
+      transform: rotate(48deg) translateX(-1700px);
+      opacity: 0;
+
+  }
 }
 .gallery img{
   float: left;
@@ -381,5 +420,10 @@ input {
 
   .item:not(:last-child) {
     margin-right: 2.5%;
+  }
+  
+  @keyframes transition {
+    from {background-color: #627FB0;}
+    to {background-color: #0D1C32;}
   }
 }
