--- a/styles/stars.css
+++ b/styles/stars.css
@@ -10,376 +10,529 @@
 /* 1. Global Styles
 ======================================== */
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-    margin: 0 auto;
-    overflow-x: hidden;
-    width: 100%;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-  }
-  body {
-    margin: 0 auto;
-    overflow-x: hidden;
-    width: 100%;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    color: #333333;
-  }
-  .clearfix::after {
-    content: " ";
-    clear: both;
-    display: table;
-  }
-  .float-right {
-    float: right;
-  }
-  
-  /* 2. Typography Styles
-  ======================================== */
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: 'Barlow Condensed', Helvetica, sans-serif;
-    font-weight: 700;
-    line-height: 1.25;
-    margin-bottom: 15px;
-    transition: font-size 0.25s ease;
-    text-transform: uppercase;
-  }
-  
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0 auto;
+  overflow-x: hidden;
+  width: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+  width: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  color: #333333;
+}
+.clearfix::after {
+  content: " ";
+  clear: both;
+  display: table;
+}
+.float-right {
+  float: right;
+}
+
+/* 2. Typography Styles
+======================================== */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Barlow Condensed', Helvetica, sans-serif;
+  font-weight: 700;
+  line-height: 1.25;
+  margin: 20px;
+  transition: font-size 0.25s ease;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: calc(100px / 1.25);
+  line-height: 0.85;
+}
+h2 {
+  font-size: calc(65px / 1.25);
+  margin-top: 10px;
+  line-height: 0.85;
+}
+@media(min-width: 1024px) {
   h1 {
-    font-size: calc(100px / 1.25);
-    line-height: 0.85;
+    font-size: 100px;
   }
   h2 {
-    font-size: calc(65px / 1.25);
-    margin-top: 10px;
-    line-height: 0.85;
+    font-size: 60px;
   }
-  @media(min-width: 1024px) {
-    h1 {
-      font-size: 100px;
-    }
-    h2 {
-      font-size: 60px;
-    }
-  }
-  p {
-    font-family: 'Barlow', Georgia, serif;
-    font-size: 16px;
-    line-height: 23px;
-    margin: 0 0 15px;
-  }
-  a {
-    font-family: 'Barlow', Helvetica, sans-serif;
-    font-size: 16px;
-    color: #0D1C32;
-  }
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-  li {
-    font-family: 'Barlow', Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 23px;
-    list-style: none;
-  }
-  img {
-    width: 100%;
-  }
-  
-  /* 3. Structure Styles
-  ======================================== */
-  .container {
-    margin: 0 auto;
-    max-width: 1280px;
-    padding: 0 15px;
-  }
-  .container:before, .container:after {
-    content: " ";
-    display: table;
-    clear: both;
-  }
+}
+p {
+  font-family: 'Barlow', Georgia, serif;
+  font-size: 16px;
+  line-height: 23px;
+  margin: 0 0 15px;
+}
+a {
+  font-family: 'Barlow', Helvetica, sans-serif;
+  font-size: 16px;
+  color: #0D1C32;
+  text-decoration: none;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
+li {
+  font-family: 'Barlow', Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 23px;
+  list-style: none;
+}
+img {
+  width: 100%;
+}
+
+/* 3. Structure Styles
+======================================== */
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 0 15px;
+}
+.container:before, .container:after {
+  content: " ";
+  display: table;
+  clear: both;
+}
+.mobile-hide {
+  display: none;
+}
+.mobile-show {
+  display: block;
+}
+@media(min-width: 720px) {
   .mobile-hide {
+    display: block;
+  }
+
+  .mobile-show {
     display: none;
   }
-  .mobile-show {
-    display: block;
-  }
-  @media(min-width: 720px) {
-    .mobile-hide {
-      display: block;
-    }
-  
-    .mobile-show {
-      display: none;
-    }
-  }
-  /* 4. Modules Styles
-  ======================================== */
-  
-  /* Site Navigation */
-  .site-header {
-    background-color: #FFFFFF;
-    padding: 30px 15px;
-  }
-  .site-navigation {
-    margin: 0 auto;
-    max-width: 1280px;
-  }
-  .site-header-left,
-  .footer-left {
-    display: inline-block;
-  }
-  .site-header-left li {
-    line-height: 0;
-    margin: 10px;
-  }
-  .site-header-left li button {
-    background-color: #FFFFFF;
-    border-radius: 20px;
-  }
-  .site-header-left img { 
-    border-radius: 20px;
-    height: 100px;
-    width: 100px;
-  
-  }
-  .site-header-right,
+}
+/* 4. Modules Styles
+======================================== */
+
+/* Site Navigation */
+.site-header {
+  background-color: #FFFFFF;
+  padding: 30px 15px;
+}
+.site-navigation {
+  margin: 0 auto;
+  max-width: 1280px;
+}
+.site-header-left,
+.footer-left {
+  display: inline-block;
+}
+.site-header-left li {
+  line-height: 0;
+  margin: 10px;
+}
+.site-header-left li button {
+  background-color: #FFFFFF;
+  border-radius: 20px;
+}
+.site-header-left img { 
+  border-radius: 20px;
+  height: 100px;
+  width: 100px;
+}
+.site-header-right,
+.footer-right {
+  display: inline-block;
+  float: right;
+}
+.site-header-right li,
+.footer-right li {
+  display: inline;
+}
+.site-header-right li a {
+  text-decoration: wavy;
+  text-decoration-line: overline;
+  text-decoration-thickness: 1px;
+  text-decoration-color: cornflowerblue;
+  margin: 20px;
+}
+.caption{
+  color: #FFFFFF;
+}
+.site-header-left .page:hover p.caption{
+  color: #000000;
+  font-size: 20px;
+  font-weight: 550;
+  text-align: center;
+}
+#home {
+  background-color: rgb(255 202 0 / 24%);
+}
+#planet {
+  background-color: #c1abc5;
+}
+#rocket {
+  background-color: hsla(36.52 100% 50% / 38%);
+  padding: 5px;
+  width: 88px;
+}
+#stars:hover {
+  background-color: rgba(204, 103, 9, 0.815);
+}
+#planet:hover {
+  background-color: rgb(82, 56, 92);
+}
+#rocket:hover {
+  background-color: hsla(13, 20%, 55%, 0.404);
+  padding: 5px;
+  width: 88px;
+}
+
+.page {
+  display: inline-block;
+}
+
+/* Site Footer */
+.footer {
+  background-color: #ECF3FF;
+  padding: 30px;
+}
+.footer-navigation {
+  margin: 0 auto;
+  max-width: 1280px;
+}
+.footer-right {
+  float: none;
+  margin-top: 15px;
+}
+
+@media(min-width: 720px) {
   .footer-right {
-    display: inline-block;
     float: right;
+    margin-top: 0;
   }
-  .site-header-right li,
-  .footer-right li {
-    display: inline;
-  }
-  .site-header-right li a {
-    text-decoration: none;
-    margin-left: 20px;
-  }
-  #sun {
-    background-color: rgba(204, 103, 9, 0.24);
-  }
-  #moon {
-    background-color: #000000;
-  }
-  #stars {
-    background-color: hsla(218, 33%, 54%, 0.144);
-  }
+}
+.footer li {
+  line-height: 0;
+}
+.footer li a {
+  text-decoration: none;
+  margin-left: 20px;
+}
+
+/* 5. Component Styles
+======================================== */
+button {
+  border: none;
+}
+button:hover {
+  cursor: pointer;
+}
+.button {
+  border-radius: 100px;
+  display: inline-block;
+  font-family: 'Barlow', Helvetica, sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: normal;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  transition: opacity 0.5s ease;
+}
+.button:hover {
+  opacity: 0.75;
+}
+.button-primary {
+  background-color: rgb(204, 103, 9);
+  color: #FFFFFF;
+}
+.button-secondary {
+  background-color: #627FB0;
+  color: #FFFFFF;
+}
+input {
+  border-radius: 100px;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: none;
+  box-shadow: none;
+  transition: border-color 0.5s ease;
+  width: 100%;
+}
+
+/* 6. Page Styles
+======================================== */
+.page-hero-header {
+  max-height: 600px;
+
+}
+.page-hero-header-left, .page-hero-header-right {
+  width: 50%;
+  text-align: center;
+  display: inline-block;
+}
+.page-hero-header-left {
+  padding: 0px 40px;
+  color: #FFFFFF;
+}
+.main-content-info {
+  background-color: #627FB0;
+  text-align: center;
+  height: 400px;
+}
+.main-content-info-left {
+  max-height: 300px;
+  width: 50%;
+  overflow: hidden;
+  padding: 80px 0px 0px 80px;
+  position: absolute;
+}
+.main-content-info-right {
+  padding: 60px;
+  color: #FFFFFF;
+  width: 50%;
+}
+.main-content-cta-left, .main-content-cta-right {
+  width: 100%;
+  padding: 0 30px;
+  text-align: center;
+}
+.main-content-cta {
+  background-color: #0D1C32;
+  color: #FFFFFF;
+  padding: 80px 0;
+}
+.cta-container {
+  position: relative;
+}
+.cta-container input {
+  width: 100%;
+  padding: 23px 30px;
+  font-size: 1em;
+}
+.cta-container button {
+  position: absolute;
+  right: 10px;
+  top: 7px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: none;
+}
+.container-title{
+  text-align: center;
+}
+.gallery img{
+  float: left;
+  height: 100px;
+  width: 100px;
+  margin: 10px;
+}
+.main-panel {
+  background-image: url('..//images/earthbg.png');
+}
   
-  /* Site Footer */
-  .footer {
-    background-color: #ECF3FF;
-    padding: 30px;
-  }
-  .footer-navigation {
-    margin: 0 auto;
-    max-width: 1280px;
-  }
-  .footer-right {
-    float: none;
-    margin-top: 15px;
-  }
-  
-  @media(min-width: 720px) {
-    .footer-right {
-      float: right;
-      margin-top: 0;
-    }
-  }
-  .footer li {
-    line-height: 0;
-  }
-  .footer li a {
-    text-decoration: none;
-    margin-left: 20px;
-  }
-  
-  /* 5. Component Styles
-  ======================================== */
-  button {
-    border: none;
-  }
-  button:hover {
-    cursor: pointer;
-  }
-  .button {
-    border-radius: 100px;
-    display: inline-block;
-    font-family: 'Barlow', Helvetica, sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
-    line-height: normal;
-    padding: 15px 30px;
-    text-align: center;
-    text-decoration: none;
-    transition: opacity 0.5s ease;
-  }
-  .button:hover {
-    opacity: 0.75;
-  }
-  .button-primary {
-    background-color: #60B3BD;
-    color: #FFFFFF;
-  }
-  .button-secondary {
-    background-color: #627FB0;
-    color: #FFFFFF;
-  }
-  input {
-    border-radius: 100px;
-    margin-bottom: 15px;
-    padding: 10px;
-    border: none;
-    box-shadow: none;
-    transition: border-color 0.5s ease;
-    width: 100%;
-  }
-  
-  /* 6. Page Styles
-  ======================================== */
-  .page-hero-header {
-    background-color: #627FB0; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-height: 600px;
-    overflow: hidden;
-  }
+/* Items */
+.item {
+  margin-bottom: 30px;
+  width: 100%;
+  padding: 0 2%;
+  text-align: center;
+}
+.item .item-image {
+  background: #FFFFFF;
+  box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
+  border-radius: 10px;
+  width: 100%;
+  height: 250px;
+}
+.item .item-image img {
+  height: 200px;
+  max-width: fit-content;
+}
+.cards{
+  height: 400px;
+}
+@media(min-width: 720px) {
   .page-hero-header-left, .page-hero-header-right {
-    width: 100%;
-    text-align: center;
-    display: block;
+    width: 50%;
+    text-align: left;
+    display: inline-block;
+    float: left;
   }
   .page-hero-header-left {
-    padding: 0px 40px;
-    color: #FFFFFF;
+    padding: 80px;
   }
-  .main-content-benefits {
-    padding: 80px 0;
-    background-color: #F5F9FF;
-  }
-  .main-content-benefits h2 {
-    color: #65A3C7;
+  .page-hero-header-left p {
+    font-size: 24px;
+    line-height: 28px;
+    margin: 0 0 20px;
   }
   .main-content-info {
-    background-color: #627FB0;
-    text-align: center;
-  }
-  .main-content-info-left {
-    max-height: 300px;
-    width: 100%;
-    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size:50%;
+    text-align: left;
   }
   .main-content-info-right {
-    padding: 60px;
-    color: #FFFFFF;
-    width: 100%;
+    padding: 80px;
+    width: 50%;
+    float: right;
+    display: inline-block;
   }
   .main-content-cta-left, .main-content-cta-right {
-    width: 100%;
-    padding: 0 30px;
-    text-align: center;
-  }
-  .main-content-cta {
-    background-color: #65A3C7;
-    color: #FFFFFF;
-    padding: 80px 0;
-  }
-  .cta-container {
-    position: relative;
-  }
-  .cta-container input {
-    width: 100%;
-    padding: 23px 30px;
-    font-size: 1em;
-  }
-  .cta-container button {
-    position: absolute;
-    right: 10px;
-    top: 7px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    border: none;
-  }
-  .gallery img{
+    width: 50%;
     float: left;
-    height: 100px;
-    width: 100px;
-    margin: 10px;
+    display: inline-block;
+    padding: 0 30px;
+    text-align: left;
   }
-  
-  /* Items */
   .item {
-    margin-bottom: 30px;
-    width: 100%;
-    padding: 0 2%;
-    text-align: center;
+    float: left;
+    margin-bottom: 0;
+    width: calc(95%/3);
   }
-  .item .item-image {
-    background: #FFFFFF;
-    box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
-    border-radius: 10px;
-    width: 100%;
-    height: 250px;
+
+  .item:not(:last-child) {
+    margin-right: 2.5%;
   }
-  @media(min-width: 720px) {
-    .page-hero-header-left, .page-hero-header-right {
-      width: 50%;
-      text-align: left;
-      display: inline-block;
-      float: left;
-    }
-    .page-hero-header-left {
-      padding: 80px;
-    }
-    .page-hero-header-left p {
-      font-size: 24px;
-      line-height: 28px;
-      margin: 0 0 20px;
-    }
-    .main-content-info {
-      background-repeat: no-repeat;
-      background-position: center left;
-      background-size:50%;
-      text-align: left;
-      height: 400px;
-    }
-      .main-content-info-left {
-        max-height: 300px;
-        width: 50%;
-        overflow: hidden;
-        padding: 80px 0px 0px 80px;
-        position: absolute;
-      }
-    .main-content-info-right {
-      padding: 80px;
-      width: 50%;
-      float: right;
-      display: inline-block;
-    }
-    .main-content-cta-left, .main-content-cta-right {
-      width: 50%;
-      float: left;
-      display: inline-block;
-      padding: 0 30px;
-      text-align: left;
-    }
-    .item {
-      float: left;
-      margin-bottom: 0;
-      width: calc(95%/3);
-    }
+
+  /* Flashcards */
+  .flashcard {
+    background-color: transparent;
+    perspective: 1000px;
+  }
   
-    .item:not(:last-child) {
-      margin-right: 2.5%;
-    }
+  .flashcard-inner {
+    position: relative;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
+  
+  .flashcard:hover .flashcard-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flashcard-front, .flashcard-back {
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flashcard-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flashcard-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+/*Quiz*/
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* Add a background color when the inputs get focus */
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn, .signupbtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add padding to container elements */
+.quiz-container {
+  padding: 16px;
+}
+
+/* The Modal (background) */
+.quiz {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 50px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* Style the horizontal ruler */
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+ 
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #f1f1f1;
+}
+
+.close:hover,
+.close:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+     width: 100%;
+  }
+}
+}
