--- a/styles/global.css
+++ b/styles/global.css
@@ -172,7 +172,10 @@ img {
   color: #FFFFFF;
 }
 .site-header-left .page:hover p.caption{
-  color: #000000;
+  color: #868686;
+  font-size: 20px;
+  font-weight: 550;
+  text-align: center;
 }
 #stars {
   background-color: rgb(255 202 0 / 24%);
@@ -343,17 +346,19 @@ input {
   
 /* Items */
 .item {
+  margin-top: 30px;
   margin-bottom: 30px;
   width: 100%;
   padding: 0 2%;
   text-align: center;
+  height: 100%;
 }
 .item .item-image {
   background: #FFFFFF;
   box-shadow: 0 5px 20px 0 rgba(0,0,0,0.05);
   border-radius: 10px;
   width: 100%;
-  height: 250px;
+  height: 100%;
 }
 .item .item-image img {
   height: 200px;
@@ -431,7 +436,7 @@ input {
   }
   
   .flashcard-front {
-    background-color: #bbb;
+    background-color: #bbbbbb65;
     color: black;
   }
   
@@ -439,6 +444,7 @@ input {
     background-color: #2980b9;
     color: white;
     transform: rotateY(180deg);
+    padding: 0px 20px;
   }
 
 /*Quiz*/
