--- a/styles/planets.css
+++ b/styles/planets.css
@@ -26,7 +26,7 @@ body {
   width: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  color: #333333;
+  color: #ffffff;
 }
 .clearfix::after {
   content: " ";
@@ -79,7 +79,7 @@ p {
 a {
   font-family: 'Barlow', Helvetica, sans-serif;
   font-size: 16px;
-  color: #0D1C32;
+  color: #ffffff;
 }
 ul {
   padding: 0;
@@ -165,6 +165,15 @@ img {
   text-decoration: none;
   margin-left: 20px;
 }
+.caption{
+  color: #FFFFFF;
+}
+.site-header-left .page:hover p.caption{
+  color: #000000;
+  font-size: 20px;
+  font-weight: 550;
+  text-align: center;
+}
 #sun {
   background-color: rgba(204, 103, 9, 0.24);
 }
@@ -173,6 +182,9 @@ img {
 }
 #stars {
   background-color: hsla(218, 33%, 54%, 0.144);
+}
+.page {
+  display: inline-block;
 }
 
 /* Site Footer */
@@ -227,11 +239,11 @@ button:hover {
   opacity: 0.75;
 }
 .button-primary {
-  background-color: #60B3BD;
+  background-color: #A4EC7C;
   color: #FFFFFF;
 }
 .button-secondary {
-  background-color: #627FB0;
+  background-color: #4C5AE3;
   color: #FFFFFF;
 }
 input {
